# django-snacks

./: db.sqlite3  pyproject.toml
snacks/: urls.py  views.py
snacks_project/: settings.py  urls.py
templates/: home.html
